// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App Integration Tests > スライディングウィンドウページネーション > 11番目のフィードに移動した時にスライディングウィンドウが動作する > sliding-window-after-11th-feed 1`] = `
"┌────────────────────────────┐┌────────────────────────────────────────────────────────────────────┐
│                            ││                                                                    │
│フィード一覧 (未読150件)    ││ Article 1                                                          │
│                            ││ 公開日: 2024年1月1日 09:00 | 著者: Author 1                        │
│                            ││ URL: https://example.com/article1                                  │
│╭──────────────────────────╮││                                                                    │
││                          │││ Article 1 content                                                  │
││ 評価なし           150件 │││                                                                    │
││                          │││                                                                    │
││   ● Test Feed 6 (10件)   │││                                                                    │
││   ● Test Feed 7 (10件)   │││                                                                    │
││   ● Test Feed 8 (10件)   │││                                                                    │
││   ● Test Feed 9 (10件)   │││                                                                    │
││   ● Test Feed 10 (10件)  │││                                                                    │
││ > ● Test Feed 11 (10件)  │││                                                                    │
││   ● Test Feed 12 (10件)  │││                                                                    │
││   ● Test Feed 13 (10件)  │││ ? でヘルプ表示                                               1/2件 │
││   ● Test Feed 14 (10件)  │││                                                                    │
││   ● Test Feed 15 (10件)  │││                                                                    │
││                          │││                                                                    │
│╰──────────────────────────╯││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
`;

exports[`App Integration Tests > スライディングウィンドウページネーション > 11番目のフィードに移動した時にスライディングウィンドウが動作する > sliding-window-initial-state 1`] = `
"┌────────────────────────────┐┌────────────────────────────────────────────────────────────────────┐
│                            ││                                                                    │
│フィード一覧 (未読150件)    ││ Article 1                                                          │
│                            ││ 公開日: 2024年1月1日 09:00 | 著者: Author 1                        │
│                            ││ URL: https://example.com/article1                                  │
│╭──────────────────────────╮││                                                                    │
││                          │││ Article 1 content                                                  │
││ 評価なし           150件 │││                                                                    │
││                          │││                                                                    │
││ > ● Test Feed 1 (10件)   │││                                                                    │
││   ● Test Feed 2 (10件)   │││                                                                    │
││   ● Test Feed 3 (10件)   │││                                                                    │
││   ● Test Feed 4 (10件)   │││                                                                    │
││   ● Test Feed 5 (10件)   │││                                                                    │
││   ● Test Feed 6 (10件)   │││                                                                    │
││   ● Test Feed 7 (10件)   │││                                                                    │
││   ● Test Feed 8 (10件)   │││ ? でヘルプ表示                                               1/2件 │
││   ● Test Feed 9 (10件)   │││                                                                    │
││   ● Test Feed 10 (10件)  │││                                                                    │
││                          │││                                                                    │
│╰──────────────────────────╯││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
`;
